1/21/99:
	o Fixed a bug that may be causing the multiple sync thing.
	o Installed the signal handler for kpilotDaemon.  It should clean
	  after itself now.
	o Added checkboxes for todoconduit and vcalconduit.
8/16/98:
	o Changed the sockets that KPilot and KPilotDaemon use so they 
	  don't interfere with anything (hopefully) other programs.
1/14/2000:
	o KPilot is now in the KDE CVS repository. Active development
	  on the 3.1 release has resumed and a 3.1final is expected
	  Real Soon Now (tm)
1/31/2000:
	o Yeah, right.
	o Changed popmail and null conduit and the KPilot setup job
	  so they have similar setup-dialog styles. Also changed the
	  menu layout and the toolbar.
7/20/2000:
	o 3.2.0 (i.e. 3.1final) is being ported to KDE 2 and is now 
	  called KPilot 4.0.0