@@ -1,0 +1,5 @@
+[Desktop Entry]
+Type=Service
+Name=KOrganizer Todo Conduit
+Implemented=file
+ServiceTypes=KPilotConduit
